--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -92,18 +92,14 @@
     position: absolute;
     top: 5px;
     left: 0px;
-    height: 25px;
-    width: 25px;
+    height: 23px;
+    width: 23px;
     background-color: #eee;
     border-radius: 50%;
 }
   
 .radio-button:hover input ~ .checkmark {
     background-color: #ccc;
-}
-  
-.radio-button input:checked ~ .checkmark {
-    background-color: #2196F3;
 }
   
 .checkmark:after {
@@ -117,12 +113,12 @@
 }
   
 .radio-button .checkmark:after {
-       top: 9px;
-      left: 9px;
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: white;
+    top: 5px;
+	left: 5px;
+	width: 14px;
+	height:14px;
+	border-radius: 50%;
+	background: rgb(45, 131, 243);
 }
 
 .custom-select {
@@ -178,4 +174,15 @@
   
 .select-items div:hover, .same-as-selected {
     background-color: rgba(0, 0, 0, 0.1);
+}
+
+.dateofbirth {
+    position: relative;
+    height: 40px;
+    width: 100px;
+    padding: 7px;
+    left: 34px;
+    border: 1.8px solid rgb(0, 0, 0);
+    margin-left:1px;
+    font-size: 15px;
 }
