--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -93,6 +93,10 @@ p {
     line-height: 1;
   }
 }
+header {
+  padding-bottom: 5px;
+  box-shadow: var(--light-shadow);
+}
 .nav-header {
   display: flex;
   align-items: center;
@@ -111,32 +115,73 @@ p {
 .nav-bar {
   display: none;
 }
+.navlink:hover {
+  color: var(--clr-pri-darkest);
+}
 .cart-toggle {
   display: none;
 }
 .search-center {
+  display: flex;
+  justify-content: unset;
   margin: 0px auto;
   width: 92%;
   height: 45px;
-  padding: 2px;
+}
+.search-bar {
+  padding: 5px;
+  width: 75%;
+  height: 100%;
   background: #ffffff;
   border: 1px solid #d5d5d5;
   box-sizing: border-box;
   border-radius: 5px;
-}
-.search-center:hover {
-  background: whitesmoke;
-}
-.search-bar {
-  width: 80%;
-  height: 100%;
-  background-color: transparent;
-  border: none;
   font-size: 14px;
 }
 .search-bar:focus,
 .search-bar:hover {
   outline: none;
+  background: whitesmoke;
+}
+.search-btn {
+  height: 100%;
+  padding: 5px 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  vertical-align: middle;
+  border-top-right-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+  background-color: var(--clr-primary);
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-contents {
+  display: none;
+  position: absolute;
+  padding-top: 6px;
+  background-color: #f9f9f9;
+  width: 130px;
+  height: fit-content;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-contents a {
+  padding: 5px 10px;
+  display: block;
+  color: #222;
+  font-size: 18px;
+  transition: var(--transition);
+}
+.dropdown-contents a:hover {
+  color: var(--clr-primary);
+  background-color: #f1f1f1;
+}
+.dropdown:hover .dropdown-contents {
+  display: block;
 }
 /* 
 ==========
@@ -216,24 +261,26 @@ Sidebar
   .nav-toggle {
     display: none;
   }
-  .nav-container {
-    /* width: 80%;
-    margin: 0 auto; */
+  /* .nav-container {
+    width: 80%;
+    margin: 0 auto;
     background-color: var(--clr-primary);
-  }
+  } */
   .nav-bar {
     max-width: 1170px;
     margin: 0 auto;
-    background-color: var(--clr-primary);
+    /* background-color: var(--clr-primary); */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 2px 1rem;
   }
-  .nav-bar a {
-    color: white;
+  .navlink {
+    color: var(--clr-primary);
     padding: 2px;
+    font-size: 20px;
     font-weight: bold;
+    transition: var(--transition);
   }
   .nav-center {
     max-width: 1170px;
