--- a/admin/src/pages/employee/employee.css
+++ b/admin/src/pages/employee/employee.css
@@ -1,112 +1,112 @@
-.user {
+.employee {
   flex: 4;
   padding: 20px;
 }
-.userTitleContainer {
+.employeeTitleContainer {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.userContainer {
+.employeeContainer {
   display: flex;
   margin-top: 20px;
 }
-.userShow {
+.employeeShow {
   flex: 1;
   padding: 20px;
   -webkit-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
 }
-.userUpdate {
+.employeeUpdate {
   flex: 2;
   padding: 20px;
   -webkit-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
   margin-left: 20px;
 }
-.userShowTop {
+.employeeShowTop {
   display: flex;
   align-items: center;
 }
-.userShowImg {
+.employeeShowImg {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
 }
-.userShowTopTitle {
+.employeeShowTopTitle {
   display: flex;
   flex-direction: column;
   margin-left: 20px;
 }
-.userShowUsername {
+.employeeShowEmployeename {
   font-weight: 600;
 }
-.userShowBottom {
+.employeeShowBottom {
   margin-top: 20px;
 }
-.userShowTitle {
+.employeeShowTitle {
   font-size: 14px;
   font-weight: 600;
   color: rgb(175, 170, 170);
 }
-.userShowInfo {
+.employeeShowInfo {
   display: flex;
   align-items: center;
   margin: 20px 0px;
   color: #444;
 }
-.userShowIcon {
+.employeeShowIcon {
   font-size: 16px !important;
 }
-.userShowInfoTitle{
+.employeeShowInfoTitle{
     margin-left: 10px;
 }
-.userUpdateImg{
+.employeeUpdateImg{
     width: 100px;
     height: 100px;
     border-radius: 10px;
     object-fit: cover;
     margin-right: 20px;
 }
-.userUpdateForm{
+.employeeUpdateForm{
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
 }
-.userTitle{
+.employeeTitle{
     font-size: 24px;
     font-weight: 600;
 }
-.userUpdateItem{
+.employeeUpdateItem{
     display: flex;
     flex-direction: column;
     margin: 10px;
 }
-.userUpdateItem>label{
+.employeeUpdateItem>label{
     margin-bottom: 5px;
     font-size: 14px;
 }
-.userUpdateInput{
+.employeeUpdateInput{
     border: none;
     width: 250px;
     border-bottom: 1px solid gray;
     height: 30px;
 }
-.userUpdateRight{
+.employeeUpdateRight{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.userUpdateUpload{
+.employeeUpdateUpload{
     display: flex;
     align-items: center;
 }
-.userUpdateIcon{
+.employeeUpdateIcon{
     cursor: pointer;
 }
-.userUpdateButton{
+.employeeUpdateButton{
     border: none;
     border-radius: 5px;
     cursor: pointer;
