--- a/admin/src/pages/newUser/newUser.css
+++ b/admin/src/pages/newUser/newUser.css
@@ -25,17 +25,15 @@
     border: 1px solid gray;
     border-radius: 5px;
 }
-.newUserGender>input{
-    margin-top: 15px;
+.userCreateImg {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-right: 20px;
 }
-.newUserGender>label{
-    margin: 10px;
-    font-size: 18px;
-    color: #555;
-}
-.newUserSelect{
-    height: 40px;
-    border-radius: 5px;
+.userUpdateIcon {
+  cursor: pointer;
 }
 .newUserButton{
     width: 200px;
