--- a/client/src/components/body/Home/Home.css
+++ b/client/src/components/body/Home/Home.css
@@ -1,253 +1,28 @@
 .title_center {
   text-align: center;
-  margin: 40px;
 }
-
 /* 
 =============
-Book List
+Event
 =============
  */
-.booklist {
-  display: grid;
-  grid-template-columns: repeat(var(--columns), 1fr);
-  margin: 200px -40px;
+.event {
+  background-image: url("https://images.unsplash.com/photo-1541690531121-5d844bfc1711?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+  background-position: center;
+  background-size: cover;
+  max-width: 1170px;
+  display: flex;
+  width: 90vw;
+  height: 300px;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: var(--radius);
+  align-items: center;
+  justify-content: center;
+  color: var(--clr-black);
 }
-
-.book {
-  grid-column-end: span 2;
-  position: relative;
-  width: 100%;
-  padding-bottom: 100%;
-  margin-top: -50%;
-}
-
-.book:nth-child(2n) {
-  grid-column-start: 2;
-}
-
-.book::before,
-.book::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-size: 50% 100%, 50% 100%;
-  background-position: left, right;
-}
-
-.book::before {
-  z-index: -10;
-  clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
-  -webkit-clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
-  background-repeat: no-repeat;
-  background-image: linear-gradient(
-      -45deg,
-      var(--yellow) 53.5%,
-      var(--green) 53.5%,
-      var(--green) 60%,
-      var(--yellow) 60%
-    ),
-    linear-gradient(
-      45deg,
-      var(--yellow) 53.5%,
-      var(--green) 53.5%,
-      var(--green) 60%,
-      var(--yellow) 60%
-    );
-}
-
-.book::after {
-  clip-path: polygon(100% 50%, 50% 100%, 0 50%, 20% 50%, 50% 80%, 80% 50%);
-  -webkit-clip-path: polygon(
-    100% 50%,
-    50% 100%,
-    0 50%,
-    20% 50%,
-    50% 80%,
-    80% 50%
-  );
-  background-repeat: no-repeat;
-  background-image: linear-gradient(45deg, var(--yellow) 40%, var(--green) 40%),
-    linear-gradient(-45deg, var(--yellow) 40%, var(--green) 40%);
-}
-
-.book:nth-child(2n)::before {
-  background-image: linear-gradient(
-      -45deg,
-      var(--pink) 53.5%,
-      var(--blue) 53.5%,
-      var(--blue) 60%,
-      var(--pink) 60%
-    ),
-    linear-gradient(
-      45deg,
-      var(--pink) 53.5%,
-      var(--blue) 53.5%,
-      var(--blue) 60%,
-      var(--pink) 60%
-    );
-}
-
-.book:nth-child(2n)::after {
-  background-image: linear-gradient(45deg, var(--pink) 40%, var(--blue) 40%),
-    linear-gradient(-45deg, var(--pink) 40%, var(--blue) 40%);
-}
-
-.book:nth-child(5n)::before {
-  background-image: linear-gradient(
-      -45deg,
-      var(--green) 53.5%,
-      var(--pink) 53.5%,
-      var(--pink) 60%,
-      var(--green) 60%
-    ),
-    linear-gradient(
-      45deg,
-      var(--green) 53.5%,
-      var(--pink) 53.5%,
-      var(--pink) 60%,
-      var(--green) 60%
-    );
-}
-
-.book:nth-child(5n)::after {
-  background-image: linear-gradient(45deg, var(--green) 40%, var(--pink) 40%),
-    linear-gradient(-45deg, var(--green) 40%, var(--pink) 40%);
-}
-
-.book:nth-child(7n)::before,
-.book:nth-child(7n-4)::before {
-  background-image: linear-gradient(
-      -45deg,
-      var(--blue) 53.5%,
-      var(--purple) 53.5%,
-      var(--purple) 60%,
-      var(--blue) 60%
-    ),
-    linear-gradient(
-      45deg,
-      var(--blue) 53.5%,
-      var(--purple) 53.5%,
-      var(--purple) 60%,
-      var(--blue) 60%
-    );
-}
-
-.book:nth-child(7n)::after,
-.book:nth-child(7n-4)::after {
-  background-image: linear-gradient(45deg, var(--blue) 40%, var(--purple) 40%),
-    linear-gradient(-45deg, var(--blue) 40%, var(--purple) 40%);
-}
-
-.book:nth-child(9n)::before,
-.book:nth-child(9n-5)::before {
-  background-image: linear-gradient(
-      -45deg,
-      var(--purple) 53.5%,
-      var(--green) 53.5%,
-      var(--green) 60%,
-      var(--purple) 60%
-    ),
-    linear-gradient(
-      45deg,
-      var(--purple) 53.5%,
-      var(--green) 53.5%,
-      var(--green) 60%,
-      var(--purple) 60%
-    );
-}
-
-.book:nth-child(9n)::after,
-.book:nth-child(9n-5)::after {
-  background-image: linear-gradient(45deg, var(--purple) 40%, var(--green) 40%),
-    linear-gradient(-45deg, var(--purple) 40%, var(--green) 40%);
-}
-
-.book img {
-  position: absolute;
-  width: 43%;
-  height: inherit;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-60%);
-  box-shadow: 5px -5px 10px rgba(0, 0, 0, 0.3);
-  transition-property: transform;
-  transition-duration: 0.3s;
-}
-
-.book img:hover {
-  transform: translateX(-40%) translateY(-70%) rotatez(25deg);
-}
-@media (min-width: 450px) {
-  .booklist {
-    margin: 190px 40px;
-  }
-}
-@media (min-width: 600px) {
-  :root {
-    --columns: 5;
-  }
-  .book:nth-child(2n) {
-    grid-column-start: auto;
-  }
-  .book:nth-child(4n-1) {
-    grid-column-start: 2;
-  }
-}
-@media (min-width: 900px) {
-  :root {
-    --columns: 7;
-  }
-  .book:nth-child(4n-1) {
-    grid-column-start: auto;
-  }
-  .book:nth-child(6n-2) {
-    grid-column-start: 2;
-  }
-}
-@media (min-width: 1200px) {
-  :root {
-    --columns: 9;
-  }
-  .book:nth-child(6n-2) {
-    grid-column-start: auto;
-  }
-  .book:nth-child(8n-3) {
-    grid-column-start: 2;
-  }
-}
-@media (min-width: 1500px) {
-  :root {
-    --columns: 11;
-  }
-  .book:nth-child(8n-3) {
-    grid-column-start: auto;
-  }
-  .book:nth-child(10n-4) {
-    grid-column-start: 2;
-  }
-}
-@media (min-width: 1800px) {
-  :root {
-    --columns: 13;
-  }
-  .book:nth-child(10n-4) {
-    grid-column-start: auto;
-  }
-  .book:nth-child(12n-5) {
-    grid-column-start: 2;
-  }
-}
-@media (min-width: 2100px) {
-  :root {
-    --columns: 15;
-  }
-  .book:nth-child(12n-5) {
-    grid-column-start: auto;
-  }
-  .book:nth-child(14n-6) {
-    grid-column-start: 2;
-  }
+.event h3,
+.event h2,
+.event p {
+  -webkit-text-stroke: 1px var(--clr-grey-dark);
 }
