--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,145 +1,218 @@
-.footer-container {
-    background-image: url(../../Image/wp2609776.jpg);
-    padding: 4rem 0 2rem 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-position: top;
-  }
-  
-  .footer-subscription {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    align-items: end;
-    text-align: end;
-  
-    margin-bottom: 24px;
-    padding: 24px;
-    color: #fff;
-  }
-  
-  .footer-subscription > p {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
-  }
-  
-  .footer-input {
-    padding: 12px 32px;
-    border-radius: 0px;
-    margin-right: 0px;
-    outline: none;
-    border: none;
-    font-size: 18px;
-    margin-bottom: 16px;
-    border: 1px solid #fff;
-  }
-  
-  .footer-links {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .footer-link-wrapper {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    font-size: 17px;
-  }
-  
-  .footer-link-items {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    box-sizing: border-box;
-  }
+/* .footer-container {
+  background-image: url(../../Image/wp2609776.jpg);
+  padding: 4rem 0 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-position: top;
+}
 
-  .footer-link-social-icons {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .footer-link-items h2 {
-    margin-bottom: 16px;
-    font-size: 20px;
-  }
-  
-  .footer-link-items h5 {
-    font-size: 20px;
-  }
-  
-  .footer-link-items > h2 {
-    color: #fff;
-  }
-  
-  .footer-link-items > h5 {
-    color: #fff;
-  }
-  
-  .footer-link-items a {
-    color: #fff;
-    text-decoration: none;
-    margin-bottom: 0.5rem;
-  }
-  
-  .footer-link-items a:hover {
-    color: #e9e9e9;
-    transition: 0.3s ease-out;
-  }
-  
-  .footer-email-form h2 {
-    margin-bottom: 2rem;
-  }
-  
-  .footer-input::placeholder {
-    color: #b1b1b1;
-  }
-  .btn-mobile {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-  
-  
-  .rights {
-    display: flex;
-    justify-content: center;
-    max-width: 1000px;
-    width: 100%;
-  }
-  
-  .social-icons {
-    padding: 5px;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-  }
-  
-  .website-rights {
-    color: #fff;
-    
-  }
-  
+.footer-subscription {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: end;
+  text-align: end;
 
-  
+  margin-bottom: 24px;
+  padding: 24px;
+  color: #fff;
+}
+
+.footer-subscription > p {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.footer-input {
+  padding: 12px 32px;
+  border-radius: 0px;
+  margin-right: 0px;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  margin-bottom: 16px;
+  border: 1px solid #fff;
+}
+
+.footer-links {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-link-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 17px;
+}
+
+.footer-link-items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.footer-link-social-icons {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-link-items h2 {
+  margin-bottom: 16px;
+  font-size: 20px;
+}
+
+.footer-link-items h5 {
+  font-size: 20px;
+}
+
+.footer-link-items > h2 {
+  color: #fff;
+}
+
+.footer-link-items > h5 {
+  color: #fff;
+}
+
+.footer-link-items a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
+
+.footer-link-items a:hover {
+  color: #e9e9e9;
+  transition: 0.3s ease-out;
+}
+
+.footer-email-form h2 {
+  margin-bottom: 2rem;
+}
+
+.footer-input::placeholder {
+  color: #b1b1b1;
+}
+.btn-mobile {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.rights {
+  display: flex;
+  justify-content: center;
+  max-width: 1000px;
+  width: 100%;
+}
+
+.social-icons {
+  padding: 5px;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+}
+
+.website-rights {
+  color: #fff;
+}
+
 .footer-logo {
-    align-items: center;
-    justify-content: center;
-    height: 150px;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
 }
-  
+
 .footer-icon {
-    height: 15px;
+  height: 15px;
 }
-  
+
 @media screen and (max-width: 768px) {
+} */
+
+.footer-center {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 2rem;
+}
+footer {
+  width: 100%;
+  background: var(--clr-white);
+  color: var(--clr-black);
+}
+footer h5 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 30px;
+}
+footer p {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 13px;
+  color: var(--clr-grey-dark);
+  padding-bottom: 0px;
+  margin-bottom: 8px;
+}
+.footer_ul {
+  margin: 0px;
+  list-style-type: none;
+  font-size: 14px;
+  /* padding: 0px 0px 10px 0px; */
+}
+
+.footer_ul li {
+  padding: 0px 0px 5px 0px;
+}
+.footer_ul li a {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: var(--clr-grey-dark);
+}
+.footer_ul li a:hover {
+  color: var(--clr-pri-darkest);
+  text-decoration: underline;
+}
+.bottom_border {
+  max-width: 1170px;
+  margin: 0 auto;
+  border-bottom: 2px solid var(--clr-grey-light);
+  padding-bottom: 20px;
+}
+.footer_bottom_ul {
+  list-style-type: none;
+  padding: 0px;
+  display: table;
+  margin-top: 10px;
+  margin-right: auto;
+  margin-bottom: 10px;
+  margin-left: auto;
+  text-align: center;
+}
+
+.footer_bottom_ul li {
+  display: inline;
+}
+
+.footer_bottom_ul li a {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: var(--clr-grey-dark);
+  margin: 0 20px;
+  font-weight: bold;
+}
+.footer_bottom_ul li a:hover {
+  color: var(--clr-pri-dark);
+}
+.bookstore {
+  color: var(--clr-pri-dark);
+}
+.bookstore:hover {
+  color: var(--clr-pri-hover);
 }
