--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -13,7 +13,7 @@ Variables
   --clr-blue-bg: #e3f2fd;
   --clr-grey-bg: #f9f9f9;
   --clr-grey: #9e9e9e;
-  --clr-grey-light: #f1f1f1;
+  --clr-grey-light: #e2e2e2;
   --clr-grey-dark: #424242;
   --clr-white: #fff;
   --clr-red: #f44336;
