--- a/client/src/components/body/Products/Products.css
+++ b/client/src/components/body/Products/Products.css
@@ -1,11 +1,34 @@
-.product_center {
+.breadcrumb {
+  max-width: 1170px;
+  width: 90vw;
   margin: 0 auto;
+  font-size: 16px;
+  padding: 8px 0;
+  color: var(--clr-grey);
+}
+.breadcrumb a {
+  color: var(--clr-grey);
+  transition: var(--transition);
+}
+.breadcrumb a:hover {
+  color: var(--clr-black);
+}
+.p_center {
+  background: var(--clr-white);
+  border-radius: var(--radius);
+  width: 90vw;
+  margin: 0 auto;
+}
+.product_center {
+  margin: 20px auto;
   width: 90vw;
   max-width: 1170px;
   display: grid;
   justify-items: center;
   row-gap: 2rem;
   column-gap: 1rem;
+  background: var(--clr-white);
+  border-radius: var(--radius);
 }
 .product_item {
   /* width: 15rem; */
@@ -16,6 +39,19 @@
   display: grid;
   grid-template-rows: auto 1fr;
 }
+.product_item img {
+  /* height: 24rem;
+  width: 15rem; */
+  width: 400px;
+  height: 600px;
+  object-fit: cover;
+  transition: var(--transition);
+  box-shadow: var(--light-shadow);
+  border-radius: var(--radius);
+}
+.product_item img:hover {
+  box-shadow: var(--dark-shadow);
+}
 .cover_container {
   position: relative;
 }
@@ -23,8 +59,10 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 24rem;
-  width: 15rem;
+  /* height: 24rem;
+  width: 15rem; */
+  width: 400px;
+  height: 600px;
   transition: var(--transition);
   border-radius: var(--radius);
   text-align: center;
@@ -49,57 +87,69 @@
   top: 50%;
   transform: translateY(-50%);
 }
-.product_item img {
-  height: 24rem;
-  width: 15rem;
-  object-fit: cover;
-  transition: var(--transition);
-  box-shadow: var(--light-shadow);
-  border-radius: var(--radius);
-}
-.product_item img:hover {
-  box-shadow: var(--dark-shadow);
-}
-
 .product_item h3 {
+  margin: 0;
   font-size: 20px;
+}
+.product_item h5 {
+  color: var(--clr-primary);
 }
 .product_item h4 {
-  color: darkgrey;
-}
-@media screen and (min-width: 576px) {
-  .product_center {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  }
+  color: var(--clr-grey);
 }
 .filter {
+  background-color: var(--clr-white);
+  border-radius: var(--radius);
   display: block;
-  font-size: 16px;
-  font-size: 14px;
-  padding: 1rem 3rem;
+  padding: 1rem;
 }
 .side_header {
-  color: white;
+  color: var(--clr-black);
   margin-top: 5px;
-  padding-left: 5px;
+  /* padding-left: 5px; */
   font-weight: bold;
-  font-size: 20px;
-  background: rgb(83, 142, 219);
+  text-transform: uppercase;
+  font-size: 18px;
+  /* background: var(--clr-primary); */
   border-radius: var(--radius);
 }
+.categories,
+.publishers,
+.price_range {
+  border-bottom: 1px solid var(--clr-grey-light);
+}
 @media screen and (min-width: 700px) {
+  .p_center {
+    max-width: 1170px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: unset;
+  }
   .filter {
     display: table;
   }
   .categories {
+    width: 100%;
+  }
+  .product_center {
+    width: 60vw;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    border-left: 1px solid var(--clr-grey-light);
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .product_center {
+    width: 75vw;
+  }
+  .categories {
     width: 200px;
   }
-  .center {
-    max-width: 1170px;
-    margin: 0 auto;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    padding: 1rem;
+  .product_item img,
+  .cover {
+    height: 24rem;
+    width: 15rem;
   }
 }
