--- a/admin/src/pages/order/order.css
+++ b/admin/src/pages/order/order.css
@@ -6,18 +6,58 @@
   padding: 20px;
   -webkit-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
-  display: flex;
 }
-.leftContent {
+.topContent {
   padding: 20px;
   -webkit-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
+  width: 30%;
+}
+.orderItem {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.itemTitle {
+  margin-right: 10px !important;
+  font-weight: 400;
+  flex-basis: 100px;
+}
+.orderItem > input {
+  border: none;
+  border-bottom: 1px solid rgb(202, 0, 0);
   flex: 1;
 }
-.rightContent {
+.orderItem > input:focus {
+  outline: none;
+}
+.orderItem > select {
+  flex: 1;
+  padding: 8px;
+  border-radius: 5px;
+}
+.bottomContent {
   padding: 20px;
   -webkit-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
-  flex: 2;
-  margin-left: 20px;
+  margin-top: 20px;
+  width: 70%;
+}
+.orderListImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+.updateOrderButton {
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px;
+  background-color: darkblue;
+  color: white;
+  font-weight: 600;
+  padding: 5px 20px;
+  margin-top: 20px;
 }
