--- a/client/src/components/body/About/About.css
+++ b/client/src/components/body/About/About.css
@@ -1,54 +1,20 @@
-.about-links {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.about-items {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    width: 100%;
-    box-sizing: border-box;
-    padding: 25px;
-    line-height: 50px;
-}
-
-.aboutimage-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 80%;
-    font-size: 18px;
+.about-container {
+    margin-left: 100px;
     padding: 30px;
-    margin-left: 10px;
+    margin-right: 100px;
 }
 
-.aboutinfo-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 80%;
-    font-size: 18px;
-    padding: 30px;
-    margin-left: 60px;
+.about-container h1 {
+    font-size: 35px;
 }
 
-.about-container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    font-size: large;
-    line-height: 100px;
-    padding: 50px;
+.about-header {
+    padding-top: 10px;
+    margin-right: 10px;
+    font-size: 20px;
 }
 
-.about-image {
-    margin-top: 40px;
-    margin-left: 20px;
-    margin-right: 30px;
-    height: 200px;
+.about-content {
+    font-size: 20px;
+    padding-top: 10px;
 }
