Done Basic Features

--- a/admin/src/components/widgetLg/widgetLg.css
+++ b/admin/src/components/widgetLg/widgetLg.css
@@ -36,15 +36,19 @@
   border: none;
   border-radius: 10px;
 }
-.widgetLgButton.Approved {
+.widgetLgButton.Complete {
   background-color: #e5faf2;
   color: #3bb077;
 }
-.widgetLgButton.Declined {
+.widgetLgButton.Decline {
   background-color: #fff0f1;
   color: #d95087;
 }
 .widgetLgButton.Pending {
   background-color: #ebf1fe;
   color: #2a7ade;
+}
+.widgetLgButton.Delivering {
+  background-color: #ffffc2;
+  color: #ffa704;
 }
