--- a/admin/src/components/widgetSm/widgetSm.css
+++ b/admin/src/components/widgetSm/widgetSm.css
@@ -1,41 +1,45 @@
 .widgetSm {
-  flex: 1;
-  -webkit-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
-  box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
-  padding: 20px;
-  margin-right: 20px;
+    flex: 1;
+    -webkit-box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 0px 11px -1px rgba(0, 0, 0, 0.35);
+    padding: 20px;
+    margin-right: 20px;
 }
-.widgetSmTitle{
+.widgetSmTitle {
     font-size: 22px;
     font-weight: 600;
 }
-.widgetSmImg{
+.widgetSmImg {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     object-fit: cover;
 }
-.widgetSmList{
+.widgetSmList {
     margin: 0;
     padding: 0;
     list-style: none;
 }
-.widgetSmListItem{
+.widgetSmListItem {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 20px 0px;
-}.widgetSmUser{
+}
+.widgetSmUser {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
-.widgetSmUserName{
+.widgetSmUserName {
     font-weight: 600;
+    display: flex;
+    align-items: center;
 }
-.widgetSmUserTitle{
+.widgetSmUserTitle {
     font-weight: 300;
 }
-.widgetSmButton{
+.widgetSmButton {
     display: flex;
     align-items: center;
     border: none;
@@ -45,7 +49,7 @@
     color: #555;
     cursor: pointer;
 }
-.widgetSmIcon{
+.widgetSmIcon {
     margin-right: 5px;
     font-size: 16px !important;
 }
