--- a/admin/src/components/topbar/topbar.css
+++ b/admin/src/components/topbar/topbar.css
@@ -1,4 +1,4 @@
-.topbar{
+.topbar {
     width: 100%;
     height: 50px;
     background-color: white;
@@ -6,31 +6,31 @@
     top: 0;
     z-index: 999;
 }
-.tobarWrapper{
+.tobarWrapper {
     height: 100%;
     padding: 0px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.logo{
+.logo {
     font-weight: bold;
     font-size: 30px;
     color: darkblue;
     cursor: pointer;
 }
-.topRight{
+.topRight {
     display: flex;
     align-items: center;
     margin-right: 10px;
     color: #555;
 }
-.topbarIconContainer{
+.topbarIconContainer {
     position: relative;
     cursor: pointer;
     margin-right: 5px;
 }
-.topIconBadge{
+.topIconBadge {
     width: 15px;
     height: 15px;
     position: absolute;
@@ -43,9 +43,40 @@
     justify-content: center;
     align-items: center;
 }
-.topAvatar{
+.topAvatar {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     cursor: pointer;
+}
+.welcome-text {
+    margin-right: 20px;
+}
+
+.logout_btn {
+    background-color: #ffffff;
+    border: 1px solid rgb(209, 213, 219);
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    color: #111827;
+    font-family: 'Inter var', ui-sans-serif, system-ui, -apple-system, system-ui,
+        'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+        'Noto Color Emoji';
+    font-size: 0.875rem;
+    font-weight: 600;
+    line-height: 1.25rem;
+    padding: 0.75rem 1rem;
+    text-align: center;
+    text-decoration: none #d1d5db solid;
+    text-decoration-thickness: auto;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.logout_link {
+    text-decoration: none;
 }
